{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 11,
  "lineage": "dfab8cd6-6e00-2bf0-bb01-2b671bb9fc71",
  "resources": [
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:574124503382:security-group/sg-053534d708f37d88d",
            "description": "Allow inbound traffic from the security groups",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053534d708f37d88d",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow inbound traffic from CIDR blocks",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from existing Security Groups",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0046a4e8de0e30dad"
                ],
                "self": false,
                "to_port": 1521
              }
            ],
            "name": "eg-prod-app",
            "name_prefix": null,
            "owner_id": "574124503382",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eg-prod-app",
              "Namespace": "eg",
              "Stage": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e18b20cc45528d6"
          }
        }
      ]
    },
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-1702983455",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-053534d708f37d88d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.rds_instance.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.16.0.0/16"
            ],
            "description": "Allow inbound traffic from CIDR blocks",
            "from_port": 1521,
            "id": "sgrule-4225859598",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053534d708f37d88d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1521,
            "type": "ingress"
          },
          "dependencies": [
            "module.rds_instance.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_security_groups",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow inbound traffic from existing Security Groups",
            "from_port": 1521,
            "id": "sgrule-3709585648",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053534d708f37d88d",
            "self": false,
            "source_security_group_id": "sg-0046a4e8de0e30dad",
            "to_port": 1521,
            "type": "ingress"
          },
          "dependencies": [
            "module.rds_instance.aws_security_group.default"
          ]
        }
      ]
    }
  ]
}